# ChangeLog for app-portage/squashed-portage
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashed-portage-0.18 (25 Sep 2014)

  25 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.18.ebuild:
  Version BUmp

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix script installation part II

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix script installation

  23 Sep 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Fix blocker for openrc

*squashed-portage-0.17 (16 Sep 2014)

  16 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.17.ebuild,
  squashed-portage-9999.ebuild:
  Version Bump

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix broken live version

  22 Jul 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-0.16.ebuild,
  squashed-portage-9999.ebuild:
  Equalize versions

  07 Jul 2014; Johann Schmitz <ercpe@gentoo.org> -squashed-portage-0.11.ebuild,
  -squashed-portage-0.12.ebuild, -squashed-portage-0.13.ebuild,
  -squashed-portage-0.14.ebuild, -squashed-portage-0.15.1.ebuild,
  -squashed-portage-0.8.ebuild, -squashed-portage-0.9.ebuild,
  squashed-portage-0.16.ebuild:
  Dropped old version; removed dependency to python-argparse

  26 May 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild:
  Fix repo uri, thanks ercpe making it available

*squashed-portage-0.16 (14 May 2014)

  14 May 2014; Johann Schmitz <ercpe@gentoo.org> +squashed-portage-0.16.ebuild:
  Version bump with awesome features

*squashed-portage-0.15.1 (11 May 2014)

  11 May 2014; Johann Schmitz <ercpe@gentoo.org>
  +squashed-portage-0.15.1.ebuild:
  Version bump of squashed-portage

  21 Mar 2014; Justin Lecher <jlec@gentoo.org> squashed-portage-9999.ebuild: