@@ -21,6 +21,7 @@ IUSE="aufs zsync"
 RDEPEND="
 	!<sys-apps/openrc-0.13
 	dev-python/progressbar[${PYTHON_USEDEP}]
+	>=sys-apps/portage-2.2.8
 	sys-fs/squashfs-tools:0
 	aufs? ( sys-fs/aufs-util )
 	zsync? ( net-misc/zsync )"
