@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Sep 2014; Justin Lecher <jlec@gentoo.org> -squashed-portage-0.16.ebuild,
+  -squashed-portage-0.17.ebuild, squashed-portage-0.18.ebuild,
+  squashed-portage-9999.ebuild:
+  Fix portage dep version
+
 *squashed-portage-0.18 (25 Sep 2014)
 
   25 Sep 2014; Justin Lecher <jlec@gentoo.org> +squashed-portage-0.18.ebuild:
